# devenv

./: .editorconfig  .gitattributes  .gitignore  .shellcheckrc  CLAUDE.md  LICENSE  Makefile  README.md  WSL_Image_Mover.ps1  config.json  config.template.json  config.yaml  de.ps1  debug_structure.sh  debug_yaml.sh  devenv  devenv copy.sh  devenv.ps1  devenv.sh  diag_paths.ps1  error.txt  fix_py.ps1  install.bat  install.ps1  secrets.local.example  windows-support-overview.md  windows-troubleshooting.md
toolkits/vfx-bootstrap/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
toolkits/vfx-bootstrap/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
toolkits/vfx-bootstrap/.github/workflows/: ci.yml
toolkits/vfx-bootstrap/bootstrap/: bootstrap.sh
toolkits/vfx-bootstrap/bootstrap/modules/: conda.sh  docker.sh  git.sh
toolkits/vfx-bootstrap/builder/: __init__.py  cache.py  cli.py  container.py  core.py
toolkits/vfx-bootstrap/docs/: architecture.md  recipe-porting.md  vfx-platform-2024.md  vision.md
toolkits/vfx-bootstrap/packager/: __init__.py  cli.py
toolkits/vfx-bootstrap/packager/exporters/: __init__.py  archive.py  base.py  conda.py  tarball.py
toolkits/vfx-bootstrap/packager/schema/: __init__.py  manifest.py  package.schema.yaml
toolkits/vfx-bootstrap/recipes/: README.md  conda_build_config.yaml
toolkits/vfx-bootstrap/recipes/alembic/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/boost/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/draco/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/imath/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/materialx/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/opencolorio/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/recipes/openexr/: bld.bat  build.sh  meta.yaml
toolkits/vfx-bootstrap/tests/: __init__.py  test_bootstrap.sh  test_builder.py  test_packager.py  test_recipes.py
(+202 files in other folders)
